[package]
name = "reqwest_dav"
version = "0.1.0"
edition = "2021"
description = "A webdav client with tokio and reqwest"
license = "MIT"
repository = "https://github.com/niuhuan/reqwest_dav"

[dependencies]
anyhow = "1.0.59"
digest_auth = "0.3.0"
reqwest = "0.11.11"
url = "2.3.1"
tokio = { version = "1.21.0", features = ["full"] }
http = "0.2.8"

[dev-dependencies]

