[package]
name = "reqwest_dav"
version = "0.1.4"
edition = "2021"
description = "An async webdav client with tokio and reqwest"
license = "MIT"
repository = "https://github.com/niuhuan/reqwest_dav"
resolver = "2"

[dependencies]
digest_auth = "0.3.0"
reqwest = { version = "0.11.11", default-features = false }
url = "2.3.1"
tokio = { version = "1.21.0", features = ["sync"] }
http = "0.2.8"
chrono = "0.4.22"
serde = "1.0.144"
serde_derive = "1.0.144"
serde-xml-rs = "0.6.0"
serde_json = "1.0.85"
async-trait = "0.1.57"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[features]
default = ["reqwest/default"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
rustls-tls-manual-roots = ["reqwest/rustls-tls-manual-roots"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
