[package]
name = "reqwest_dav"
version = "0.1.8"
edition = "2021"
description = "An async webdav client with tokio and reqwest"
keywords = ["http", "request", "client", "webdav"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/niuhuan/reqwest_dav"
resolver = "2"

[dependencies]
digest_auth = "0.3"
reqwest = { version = "0.11", default-features = false }
url = "2.3"
tokio = { version = "1", features = ["sync"] }
http = "0.2"
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde-xml-rs = "0.6"
serde_json = "1.0"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[features]
default = ["reqwest/default"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
rustls-tls-manual-roots = ["reqwest/rustls-tls-manual-roots"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
